🐛 Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import '~formiojs/dist/formio.full.min.css';
+
+body {
+  overflow: hidden;
+}
